--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 (function(){
     var gaScript = document.createElement('script');
     gaScript.async = true;
-    gaScript.src = 'https://www.googletagmanager.com/gtag/js?id=G-QEECZ258JX';
+    gaScript.src = 'https://www.googletagmanager.com/gtag/js?id=G-KGBBHS0BYQ';
     document.head.appendChild(gaScript);
 
     window.dataLayer = window.dataLayer || [];
@@ -131,7 +131,7 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
     window.gtag = gtag;
     gtag('js', new Date());
 
-    gtag('config', 'G-QEECZ258JX');
+    gtag('config', 'G-KGBBHS0BYQ');
 })();
 
 window.trackDecision = function(decisionLabel) {       
@@ -1323,7 +1323,7 @@ Do the exericise that you love to do, whether it is taking long walks, hikes, ru
 ║└──────────────────────────────────────┘║                                        ║
 ║                                        ║
 ║                                        ║
-║                  Vc                    ║
+║                  Vd                    ║
 ║                                        ║
 ║                 [[Begin]]                  ║
 ║                                        ║
