--- a/index.html
+++ b/index.html
@@ -119,6 +119,13 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 .big-text {
   font-size: 24px;
 }
+
+
+.secret-dot a {
+    color: inherit; /* Inherits the text color from the parent element */
+    text-decoration: none; /* Removes underlining */
+    cursor: text; /* Makes the cursor appear as normal text cursor */
+}
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">// Dynamically load the Google Analytics script
 (function(){
     var gaScript = document.createElement('script');
@@ -1323,7 +1330,7 @@ Do the exericise that you love to do, whether it is taking long walks, hikes, ru
 ║└──────────────────────────────────────┘║                                        ║
 ║                                        ║
 ║                                        ║
-║                  Vd                    ║
+║                  Ve                    ║
 ║                                        ║
 ║                 [[Begin]]                  ║
 ║                                        ║
@@ -1478,16 +1485,19 @@ There are no logic circuits in the brain, the brain logic is done by emotions...
 
 What if all those that have healed themselves sued their doctors for healing themselves? Class action lawsuit?
 
-
 You become what you think but the opposite of what you feel
 
 Remind them again soluton is more important
 
 Maybe have a decision to choose inappropriate unashamed irrational illogical ?
 
-angry about little thing but numb about big thing?
+Angry about little thing but numb about big thing?
 
-think about a time you were really angry, now think about what was going on in your life when the pain began...
+Think about a time you were really angry, now think about what was going on in your life when the pain began...
+
+You are probably a super nice person, kind, respectful, friendly and rule abiding. You probably hate the people that are rude, disrespectul and act selfish. You wish everyone was nice and peace loving and caring.
+This is a common trap, wishing the world could change so you could be comfortable.
+This is a program for you to change, for you to recognize your true nature, and to realize the world is just doing what it has to do, and you are the one that needs to change. When you are ready to change, and to change with the simple steps provided in this book, you will become more assertive, more comfortable with the world, and above all, pain free.
 
 
 
@@ -1496,16 +1506,16 @@ think about a time you were really angry, now think about what was going on in y
 
 </tw-passagedata><tw-passagedata pid="76" name="Begin" tags="" position="250,25" size="100,100">Book Notes:
 
+The book has been intentionally written to be short and keep you to the basics of healing. The reason is that you can spend many lifetimes reading about chronic pain, but if you want to heal yourself and take action, this is the book and here are the basics.
+
 The sidebar on the left can be used to go back to a previous page.
 It can also be used to save or load your reading position.
-
-The book has been intentionally written to be short and keep you to the basics of healing. The reason is that you can spend many lifetimes reading about chronic pain, but if you want to heal yourself and take action, this is the book and here are the basics.
 
 The book provides a natural and safe method to heal yourself without needing anything else except YOU.
 
 The book may be often updated based on reader feedback and revisions.
 
-I wish you a pleasant read.
+I wish you a pleasant read &lt;span class=&quot;secret-dot&quot;&gt;&lt;a data-passage=&quot;I have experienced all of these emotions at some point in my life&quot;&gt;.&lt;/a&gt;&lt;/span&gt;
 
 [[Let&#39;s start your healing journey-&gt;Are you suffering from chronic pain]]
 
