--- a/index.html
+++ b/index.html
@@ -165,8 +165,7 @@ window.trackDecision = function(decisionLabel) {
 [[No-&gt;Pain less than six months]]
 </tw-passagedata><tw-passagedata pid="3" name="Stop" tags="" position="575,700" size="100,100">I&#39;m sorry, this program does not seem applicable for you
 
-If you wish to return to the previous page, press the back button on the sidebar. 
-If you&#39;re on a mobile, the sidebar might need to be popped out by the arrow on the top left.</tw-passagedata><tw-passagedata pid="4" name="Pain longer than six months" tags="" position="425,125" size="100,100">Have you seen a licensed medical doctor about this pain?
+If you wish to return to the previous page, press the back button on the sidebar. </tw-passagedata><tw-passagedata pid="4" name="Pain longer than six months" tags="" position="425,125" size="100,100">Have you seen a licensed medical doctor about this pain?
 
 [[Yes-&gt;I have seen a doctor]]
 
@@ -1330,7 +1329,7 @@ Do the exericise that you love to do, whether it is taking long walks, hikes, ru
 ║└──────────────────────────────────────┘║                                        ║
 ║                                        ║
 ║                                        ║
-║                  Ve                    ║
+║                  Vf                    ║
 ║                                        ║
 ║                 [[Begin]]                  ║
 ║                                        ║
@@ -1499,25 +1498,35 @@ You are probably a super nice person, kind, respectful, friendly and rule abidin
 This is a common trap, wishing the world could change so you could be comfortable.
 This is a program for you to change, for you to recognize your true nature, and to realize the world is just doing what it has to do, and you are the one that needs to change. When you are ready to change, and to change with the simple steps provided in this book, you will become more assertive, more comfortable with the world, and above all, pain free.
 
+If this book resonated with you, made you consider things, made you change a little bit, then read it again as that new person, because it will change you again.
+
+Ask people to forward and share if they like the book.
+
+How can I make it aesthetically better?
+
+Whatever method you use will lead to this method
 
 
 
 
 
-</tw-passagedata><tw-passagedata pid="76" name="Begin" tags="" position="250,25" size="100,100">Book Notes:
+</tw-passagedata><tw-passagedata pid="76" name="Begin" tags="" position="250,25" size="100,100">Notes:
 
-The book has been intentionally written to be short and keep you to the basics of healing. The reason is that you can spend many lifetimes reading about chronic pain, but if you want to heal yourself and take action, this is the book and here are the basics.
+This is an //intentional// book. Through intentional choices, this book engages you in a commitment to action. It&#39;s probably different than any healing book that you have read.
+
+It has been purposely written to be short and keep you to the basics of healing. The reason for that is you can spend many lifetimes reading about chronic pain and not get better, but if you want to take the action to heal yourself, presented here are the absolute basics.
 
 The sidebar on the left can be used to go back to a previous page.
 It can also be used to save or load your reading position.
+The sidebar might need to be expanded using the arrow on the top left if you are viewing this book using a mobile device.
 
-The book provides a natural and safe method to heal yourself without needing anything else except YOU.
+The book provides a natural and safe method to heal yourself from chronic pain without needing anything else except YOU.
 
 The book may be often updated based on reader feedback and revisions.
 
-I wish you a pleasant read &lt;span class=&quot;secret-dot&quot;&gt;&lt;a data-passage=&quot;I have experienced all of these emotions at some point in my life&quot;&gt;.&lt;/a&gt;&lt;/span&gt;
+I wish you a pleasant read&lt;span class=&quot;secret-dot&quot;&gt;&lt;a data-passage=&quot;I have experienced all of these emotions at some point in my life&quot;&gt;.&lt;/a&gt;&lt;/span&gt;
 
-[[Let&#39;s start your healing journey-&gt;Are you suffering from chronic pain]]
+[[Let&#39;s begin your self healing journey.-&gt;Are you suffering from chronic pain]]
 
 </tw-passagedata><tw-passagedata pid="77" name="More mind body phrases" tags="" position="625,1875" size="100,100">Here are at least 100 phrases in the english language referring to the mind body connection. This list further highlights that the parts of the brain that feel emotions and physical pain overlap.
 
@@ -1581,7 +1590,7 @@ That’s a weight off my shoulder
 Thats a load off my mind
 Give someone the cold shoulder
 Shoulder the blame
-A chip on one&#39;s shoulder
+A chip on your shoulder
 Carrying the weight of the world on one&#39;s shoulders
 Get cold feet
 I’m falling apart
@@ -1598,7 +1607,6 @@ Losing my hair over this
 No skin off my back
 Bent out of shape
 On pins and needles
-Chip on your shoulder
 Makes your blood boil
 Foaming at the mouth
 Hanging your head
