--- a/index.html
+++ b/index.html
@@ -104,7 +104,11 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 		<div id="init-lacking"><p>Browser lacks capabilities required to play.</p><p>Upgrade or switch to another browser.</p></div>
 		<div id="init-loading"><div>Loading&hellip;</div></div>
 	</div>
-	<tw-storydata name="HealYourPa.in" startnode="72" creator="Twine" creator-version="2.9.2" format="SugarCube" format-version="2.37.3" ifid="CE210ACC-0486-4226-8F64-82BB19326DCA" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">.red-text {
+	<tw-storydata name="HealYourPa.in" startnode="72" creator="Twine" creator-version="2.9.2" format="SugarCube" format-version="2.37.3" ifid="CE210ACC-0486-4226-8F64-82BB19326DCA" options="" tags="" zoom="0.6" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">body {
+  font-size: 110%   
+}
+
+.red-text {
   font-size: 24px;
   color: red;
 }
@@ -122,10 +126,11 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
 
 
 .secret-dot a {
-    color: inherit; /* Inherits the text color from the parent element */
+    color: inherit; 
     text-decoration: none; /* Removes underlining */
-    cursor: text; /* Makes the cursor appear as normal text cursor */
+    cursor: text; /* Makes the cursor appear as normal */
 }
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">// Dynamically load the Google Analytics script
 (function(){
     var gaScript = document.createElement('script');
@@ -1326,10 +1331,10 @@ Do the exericise that you love to do, whether it is taking long walks, hikes, ru
 ║└──────────────────────────────────────┘║
 ║┌──────────────────────────────────────┐║
 ║│         The Absolute Basics          │║
-║└──────────────────────────────────────┘║                                        ║
+║└──────────────────────────────────────┘║                                        
 ║                                        ║
 ║                                        ║
-║                  Vf                    ║
+║                  Vg                    ║
 ║                                        ║
 ║                 [[Begin]]                  ║
 ║                                        ║
@@ -1512,17 +1517,16 @@ Whatever method you use will lead to this method
 
 </tw-passagedata><tw-passagedata pid="76" name="Begin" tags="" position="250,25" size="100,100">Notes:
 
-This is an //intentional// book. Through intentional choices, this book engages you in a commitment to action. It&#39;s probably different than any healing book that you have read.
-
-It has been purposely written to be short and keep you to the basics of healing. The reason for that is you can spend many lifetimes reading about chronic pain and not get better, but if you want to take the action to heal yourself, presented here are the absolute basics.
+This is an //intentional// book. It&#39;s probably different than any self healing book that you have read. The focus of the book is to guide you to take the actions needed to heal yourself.
 
 The sidebar on the left can be used to go back to a previous page.
-It can also be used to save or load your reading position.
-The sidebar might need to be expanded using the arrow on the top left if you are viewing this book using a mobile device.
+It can also be used to save or load your reading position. 
 
-The book provides a natural and safe method to heal yourself from chronic pain without needing anything else except YOU.
+On a mobile device, the sidebar might need to be expanded using the arrow on the top left.
 
-The book may be often updated based on reader feedback and revisions.
+The book offers a natural and safe self-healing approach for chronic pain, requiring nothing more than YOU.
+
+Feedback is invaluable, and this book is continually refined based on readers&#39; insights and updates.
 
 I wish you a pleasant read&lt;span class=&quot;secret-dot&quot;&gt;&lt;a data-passage=&quot;I have experienced all of these emotions at some point in my life&quot;&gt;.&lt;/a&gt;&lt;/span&gt;
 
