--- a/index.html
+++ b/index.html
@@ -305,28 +305,19 @@ Given this information, can you see how emotional and physical pain might overla
 
 
 
-</tw-passagedata><tw-passagedata pid="21" name="Yes I can see how emotional and physical pain may overlap" tags="" position="1275,650" size="100,100">Great. 
+</tw-passagedata><tw-passagedata pid="21" name="Yes I can see how emotional and physical pain may overlap" tags="" position="1275,650" size="100,100">Great, let&#39;s delve into a crucial concept: 100% of pain is experienced in the brain.
 
-The next important thing that is well known is that 100% of pain is experienced in the brain.
+To illustrate, imagine severing the nerves between your foot and your brain. If you then injure your foot, would you feel pain? Likely not, because the nerve signals can&#39;t reach your brain. You might see the injury, but without these signals, you feel no pain. This highlights that pain is not felt in the injured part of the body, but in the brain which interprets these nerve signals and generates the sensation of pain.
 
-To clarify this point, imagine if you cut the nerves between your foot and your brain.
-If you hurt your foot, would you feel the pain?
+Painkillers primarily work in two ways: they either block the nerve signals at their origin or prevent the brain from receiving these signals. Importantly, they do not heal the physical injury itself.
 
-Probably not, and that&#39;s because the nerves are cut and the signals don&#39;t get to your brain.
+To emphasize just how much our experience of pain is controlled by the brain, consider phantom limb pain. Amputees sometimes feel pain in a limb that no longer exists. This occurs because the brain still perceives pain, even in the absence of actual physical signals—it&#39;s merely a perception of danger.
 
-So you could be looking at your foot getting hurt but you would not feel any pain. This is because pain is experienced by the brain not by your foot.
+This mechanism also explains why painkillers can stop being effective: the brain might still interpret the presence of pain despite blocked signals.
 
-The brain interprets the signals from the nerves and creates the feeling of pain.
+Here’s an intriguing phenomenon: have you ever felt your phone vibrate in your pocket, only to find no new messages—or sometimes, no phone at all? This is another example of how the brain interprets sensory inputs, sometimes erroneously.
 
-Pain killers work in two main ways, to stop the nerve signal at the source, or to prevent the brain from receiving the signal from the source. They don&#39;t actually do anything to heal the injury.
-
-To nail this point even further, its even possible for the brain to feel pain if the entire foot is missing - as amputees can attest to feeling ghost pain even when there is nothing there. This is because the brain is experiencing the pain. There doesn&#39;t even have to be a signal, just a perception of danger, and the brain can experience pain.
-
-This is why some pain killers stop working, because despite the signal being blocked, the brain still interprets pain.
-
-Here&#39;s another fun one. Have you ever felt your phone vibrate in your pocket yet there was no text or call? It has happened to me when there was no phone in my pocket!
-
-Advances in sensory and pain science continue to unravel more of these fascinating facts, but for our purposes, the most important thing to understand is that 100% of pain is experienced by the brain.
+These insights into sensory and pain science underscore a fundamental point: all pain is a product of brain activity.
 
 [[Ok, I buy into the fact that 100% of pain is experienced by the brain]]
 
@@ -1073,7 +1064,6 @@ Examples:
 &lt;li&gt;Watching a scary movie can cause the heart to race.&lt;/li&gt;
 &lt;li&gt;Being scared can cause you hairs to rise&lt;/li&gt;
 &lt;/ul&gt;
-
 Do these help you to change your mind that stress and tension could also cause physical pain?
 
 [[Yes I am open to new possibilities]] 
@@ -1301,14 +1291,13 @@ With love,
 Brajesh K. Singh
 Author of &quot;The Straw That Broke the Camel&#39;s Back&quot;
 
-[[Book Dedication]]</tw-passagedata><tw-passagedata pid="70" name="No, this does not make sense to me" tags="" position="1100,575" size="100,100">Let&#39;s try a simple example.
-Let&#39;s say someone says :
+[[Book Dedication]]</tw-passagedata><tw-passagedata pid="70" name="No, this does not make sense to me" tags="" position="1100,575" size="100,100">Let&#39;s consider a straightforward example. 
 
-&quot;I feel hurt&quot;
+Suppose someone states, &quot;I feel hurt.&quot; 
 
-This is actually using a physical injury to refer to an emotional feeling. There are many such phrases in the English language, more of which I will share later.
+This phrase is ambiguous because it can refer to both physical and emotional pain. Understanding the context is crucial to discerning the type of pain being communicated. English contains many such ambiguous expressions, and I&#39;ll provide more examples later. This should illustrate how common speech often uses words with multiple meanings, particularly regarding pain, suggesting a potential overlap in the brain regions involved.
 
-Ok, [[Yes I can see how emotional and physical pain may overlap]] 
+[[Yes I can see how emotional and physical pain may overlap]] 
 
 [[No I still can&#39;t see how emotional and physical pain can overlap-&gt;Stop]]</tw-passagedata><tw-passagedata pid="71" name="Let&#39;s talk about exercise" tags="" position="150,1875" size="100,100">If you recall exercise is one of the activities that activates the limbic system. Exercise is also an excellent way to accelerate your healing, because you know that the pain is not in the tissues but coming from stress and tension.
 
@@ -1334,7 +1323,7 @@ Do the exericise that you love to do, whether it is taking long walks, hikes, ru
 ║└──────────────────────────────────────┘║                                        
 ║                                        ║
 ║                                        ║
-║                  Vg                    ║
+║                  Vh                    ║
 ║                                        ║
 ║                 [[Begin]]                  ║
 ║                                        ║
