--- a/index.html
+++ b/index.html
@@ -261,13 +261,13 @@ Please let me know and I can consider adding it to a revision of this book.
 
 [[Exit-&gt;Stop]]</tw-passagedata><tw-passagedata pid="19" name="Understanding the cause of the pain is more important" tags="" position="1150,275" size="100,100">Unfortunately, many people remain in pain because they believe that understanding the cause of the pain is more important. 
 
-For example, most, if not all of us, do not understand what is life, how are we here, what is the meaning of life. Perhaps in the upcoming future we will know these things for sure, but for now there are many different theories.
+Consider this analogy: most of us don&#39;t fully grasp the meaning of life, how we came to exist, or the essence of existence itself.  Yet we thrive and enjoy our existence without knowing precisely how we came to be.
 
-But does NOT understanding these things prevent us from living?
+Does our lack of understanding prevent us from living?
 
 Of course not!  We can still live and thrive and enjoy life without really knowing HOW we came to be.
 
-In the same way, understanding the cause of the pain is unimportant. Doing the solution is the most important thing.
+In the same way, understanding the cause of the pain is secondary. Doing the solution is the most important thing.
 
 You may ask why?
 
