--- a/index.html
+++ b/index.html
@@ -131,6 +131,11 @@ var LZString=function(){var r=String.fromCharCode,o="ABCDEFGHIJKLMNOPQRSTUVWXYZa
     cursor: text; /* Makes the cursor appear as normal */
 }
 
+#ui-bar {
+    background-image: url("darknight.webp"); 
+    background-size: cover; /* Ensures the image covers the entire bar */
+    background-position: center; /* Centers the background image */
+}
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">// Dynamically load the Google Analytics script
 (function(){
     var gaScript = document.createElement('script');
@@ -259,7 +264,7 @@ Is understanding what is causing the pain more important to you, or doing the so
 </tw-passagedata><tw-passagedata pid="18" name="What I have tried is not listed" tags="" position="975,450" size="100,100">I&#39;m sorry I didn&#39;t list something you have tried.
 Please let me know and I can consider adding it to a revision of this book.
 
-[[Exit-&gt;Stop]]</tw-passagedata><tw-passagedata pid="19" name="Understanding the cause of the pain is more important" tags="" position="1150,275" size="100,100">Unfortunately, many people remain in pain because they believe that understanding the cause of the pain is more important. 
+[[Exit-&gt;Stop]]</tw-passagedata><tw-passagedata pid="19" name="Understanding the cause of the pain is more important" tags="" position="1150,275" size="100,100">Unfortunately, many people remain in pain because they believe that understanding the cause of the pain is more important 
 
 Consider this analogy: most of us don&#39;t fully grasp the meaning of life, how we came to exist, or the essence of existence itself.  Yet we thrive and enjoy our existence without knowing precisely how we came to be.
 
@@ -322,7 +327,7 @@ These insights into sensory and pain science underscore a fundamental point: all
 [[Ok, I buy into the fact that 100% of pain is experienced by the brain]]
 
 [[Sorry, this is hard for me to swallow that 100% of pain is experienced by the brain-&gt;Stop]]
-</tw-passagedata><tw-passagedata pid="22" name="Ok, I buy into the fact that 100% of pain is experienced by the brain" tags="" position="1375,400" size="100,100">Excellent, at this point, let us recap the two cornerstones of the simple cause:
+</tw-passagedata><tw-passagedata pid="22" name="Ok, I buy into the fact that 100% of pain is experienced by the brain" tags="" position="1375,375" size="100,100">Excellent, at this point, let us recap the two cornerstones of the simple cause:
 
 &lt;ul&gt;
   &lt;li&gt;The parts of the brain that process emotional pain and physical pain overlap.&lt;/li&gt;
@@ -339,7 +344,6 @@ Let us now move onto the physical aspects of pain.
   &lt;li&gt;I&#39;m assuming the diagnosis is not life threatening.&lt;/li&gt;
   &lt;li&gt;I&#39;m assuming you&#39;ve had the pain for over 6 months and it&#39;s not improving.&lt;/li&gt;
 &lt;/ul&gt;
-
 Remember, this book does not give medical advice, so please do not continue unless the above 3 are all true.
 
 Now moving on, what does your doctor say about your pain:
@@ -1024,7 +1028,6 @@ Before we start it, let&#39;s recall the main points of this program:
   &lt;li&gt;Pain dissipates when unprocessed emotions are experienced AND you are feeling safe&lt;/li&gt;
   &lt;li&gt;Understanding the cause of the pain is not necessary, only doing the solution is necessary&lt;/li&gt;
 &lt;/ul&gt;
-
 If you&#39;re comfortable with this, let&#39;s move on to the emotional meditation and describe the process.
 
 [[Tell me about the emotional meditation]]
@@ -1323,7 +1326,7 @@ Do the exericise that you love to do, whether it is taking long walks, hikes, ru
 ║└──────────────────────────────────────┘║                                        
 ║                                        ║
 ║                                        ║
-║                  Vh                    ║
+║                  Vj                    ║
 ║                                        ║
 ║                 [[Begin]]                  ║
 ║                                        ║
