--- a/index.html
+++ b/index.html
@@ -1319,7 +1319,7 @@ Do the exericise that you love to do, whether it is taking long walks, hikes, ru
 ║└──────────────────────────────────────┘║                                        
 ║                                        ║
 ║                                        ║
-║                  Vo                    ║
+║                  Vp                    ║
 ║                                        ║
 ║                 [[Begin]]                  ║
 ║                                        ║
@@ -1650,7 +1650,7 @@ He’s having cold feet
 I feel shaken up by what I saw.
 I’m completely rattled by what happened.
 
-[[Go back|Book Dedication]] </tw-passagedata><tw-passagedata pid="78" name="StoryMenu" tags="" position="150,650" size="100,100">[[Feedback]]</tw-passagedata><tw-passagedata pid="79" name="Feedback" tags="" position="325,650" size="100,100">Please provide your feedback only after you have completed the entire book.
+[[Go back|Book Dedication]] </tw-passagedata><tw-passagedata pid="78" name="StoryMenu" tags="" position="150,650" size="100,100">[[Feedback]]</tw-passagedata><tw-passagedata pid="79" name="Feedback" tags="" position="325,650" size="100,100">Kindly share your feedback after finishing the entire book.
 
 [[Yes I have read the whole book and I&#39;m ready to give my feedback]]
 </tw-passagedata><tw-passagedata pid="80" name="Yes I have read the whole book and I&#39;m ready to give my feedback" tags="" position="150,800" size="100,100">&lt;iframe src=&quot;https://docs.google.com/forms/d/e/1FAIpQLSfGyrPrs188ErKnf8R6J2thM7mQhvJbaB6eMdbypKnjLRGr8w/viewform?embedded=true&quot; width=&quot;640&quot; height=&quot;1237&quot; frameborder=&quot;0&quot; marginheight=&quot;0&quot; marginwidth=&quot;0&quot;&gt;Loading…&lt;/iframe&gt;</tw-passagedata></tw-storydata>
