--- a/index.html
+++ b/index.html
@@ -358,7 +358,6 @@ There are many kinds of physical defects that are common across the population a
 
 Such a study was done in the New England Journal of Medicine showing that &lt;i&gt;2 out of 3 people with no pain have spinal defects normally attributed to causing pain&lt;/i&gt;. 2 out of 3 people is huge. Please reread this sentence to allow the gravity of this finding to sink in.
 
-A more common example is posture. We are told to have a straight posture otherwise we will get pain. Yet if you look around, there are 1000&#39;s of people with &quot;poor posture&quot; and no pain. This is simply a confirmation bias when those with poor posture report being in pain.
 
 [[I am open to the fact that my physical defect may not be causing the pain]]
 
@@ -369,7 +368,7 @@ A more common example is posture. We are told to have a straight posture otherwi
 
 It can be scary to see a scan with your defect on there. However, knowing that it&#39;s a normal occurence for many others not in pain can help you to relax and for you to know that your body is fine.
 
-An interesting fact that is that radiology is recognized for its significant variability in diagnostic interpretations - (radiologists are the doctors that interpret the scans).
+An interesting fact that is that radiologists have significant variability their diagnostic interpretrations (these are the doctors that interpret your scans).
 
 [[Let&#39;s continue now to understanding the nature of stress and tension]]</tw-passagedata><tw-passagedata pid="27" name="Let&#39;s continue now to understanding the nature of stress and tension" tags="" position="1850,125" size="100,100">Let&#39;s recap our key understandings so far:
 
@@ -407,18 +406,19 @@ Would you agree that some or all of these bring stress and tension into your lif
 
 Now let&#39;s consider some personality traits. 
 
-&lt;ul&gt;
-  &lt;li&gt;Perfectionist&lt;/li&gt;
-  &lt;li&gt;People Pleaser&lt;/li&gt;
-  &lt;li&gt;Do Gooder&lt;/li&gt;
-  &lt;li&gt;Hard on yourself&lt;/li&gt;
-  &lt;li&gt;Dependable&lt;/li&gt;
-  &lt;li&gt;Overwhelmed&lt;/li&gt;
-  &lt;li&gt;Controlling&lt;/li&gt;
-  &lt;li&gt;Sensitive to criticism&lt;/li&gt;
-  &lt;li&gt;Spiritual/Religious&lt;/li&gt;
-  &lt;li&gt;Compulsive&lt;/li&gt;
-&lt;/ul&gt;
+&lt;div&gt;
+  &lt;label&gt;&lt;input type=&quot;checkbox&quot;&gt; Perfectionist&lt;/label&gt;
+  &lt;label&gt;&lt;input type=&quot;checkbox&quot;&gt; People Pleaser&lt;/label&gt;
+  &lt;label&gt;&lt;input type=&quot;checkbox&quot;&gt; Do Gooder&lt;/label&gt;
+  &lt;label&gt;&lt;input type=&quot;checkbox&quot;&gt; Hard on yourself&lt;/label&gt;
+  &lt;label&gt;&lt;input type=&quot;checkbox&quot;&gt; Dependable&lt;/label&gt;
+  &lt;label&gt;&lt;input type=&quot;checkbox&quot;&gt; Overwhelmed&lt;/label&gt;
+  &lt;label&gt;&lt;input type=&quot;checkbox&quot;&gt; Controlling&lt;/label&gt;
+  &lt;label&gt;&lt;input type=&quot;checkbox&quot;&gt; Sensitive to criticism&lt;/label&gt;
+  &lt;label&gt;&lt;input type=&quot;checkbox&quot;&gt; Spiritual/Religious&lt;/label&gt;
+  &lt;label&gt;&lt;input type=&quot;checkbox&quot;&gt; Compulsive&lt;/label&gt;
+&lt;/div&gt;
+Check off all those that apply.
 Would you say you have a few of these traits?
 
 [[Yes I have one or more these traits]]
@@ -1319,7 +1319,7 @@ Do the exericise that you love to do, whether it is taking long walks, hikes, ru
 ║└──────────────────────────────────────┘║                                        
 ║                                        ║
 ║                                        ║
-║                  Vp                    ║
+║                  V1                    ║
 ║                                        ║
 ║                 [[Begin]]                  ║
 ║                                        ║
@@ -1516,7 +1516,7 @@ The book offers a natural and safe self-healing approach for chronic pain, requi
 
 Plan to set aside a couple of hours to do the experiences described in this book.
 
-[[Feedback]] is invaluable, and this book is continually refined based on your insights and updates.
+[[Feedback]] from you is invaluable, and this book is continually refined based on your insights and updates.
 
 I wish you an insightful and transforming read&lt;span class=&quot;secret-dot&quot;&gt;&lt;a data-passage=&quot;I have experienced all of these emotions at some point in my life&quot;&gt;.&lt;/a&gt;&lt;/span&gt;
 
