--- a/index.html
+++ b/index.html
@@ -1280,6 +1280,8 @@ For the rest of your life, you can use this process at anytime to get pain free.
 
 Spend the time now to master it and you&#39;ll change your life in the way and enjoy doing all the thing you ever wanted to do!
 
+If reading this book has changed you even a little bit, then I suggest to reread this book, so that the &quot;changed you&quot; may read new insights in your subsequent read.
+
 Thank you for taking this course and I wish you a pain free life!
 
 With love,
@@ -1651,6 +1653,7 @@ I feel shaken up by what I saw.
 I’m completely rattled by what happened.
 
 [[Go back|Book Dedication]] </tw-passagedata><tw-passagedata pid="78" name="StoryMenu" tags="" position="150,650" size="100,100">[[Feedback]]</tw-passagedata><tw-passagedata pid="79" name="Feedback" tags="" position="325,650" size="100,100">Kindly share your feedback after finishing the entire book.
+You can click the feedback button on the left sidebar (for mobile devices it may need to be popped out by clicking on the arrow on the top left).
 
 [[Yes I have read the whole book and I&#39;m ready to give my feedback]]
 </tw-passagedata><tw-passagedata pid="80" name="Yes I have read the whole book and I&#39;m ready to give my feedback" tags="" position="150,800" size="100,100">&lt;iframe src=&quot;https://docs.google.com/forms/d/e/1FAIpQLSfGyrPrs188ErKnf8R6J2thM7mQhvJbaB6eMdbypKnjLRGr8w/viewform?embedded=true&quot; width=&quot;640&quot; height=&quot;1237&quot; frameborder=&quot;0&quot; marginheight=&quot;0&quot; marginwidth=&quot;0&quot;&gt;Loading…&lt;/iframe&gt;</tw-passagedata></tw-storydata>
