--- a/index.html
+++ b/index.html
@@ -1284,6 +1284,8 @@ If reading this book has changed you even a little bit, then I suggest to reread
 
 Thank you for taking this course and I wish you a pain free life!
 
+Please do give me [[Feedback]] and help me make this an even better book for you and others in pain.
+
 With love,
 
 Brajesh K. Singh
@@ -1321,7 +1323,7 @@ Do the exericise that you love to do, whether it is taking long walks, hikes, ru
 ║└──────────────────────────────────────┘║                                        
 ║                                        ║
 ║                                        ║
-║                  V1                    ║
+║                  VA                    ║
 ║                                        ║
 ║                 [[Begin]]                  ║
 ║                                        ║
