--- a/index.html
+++ b/index.html
@@ -1520,7 +1520,7 @@ The book offers a natural and safe self-healing approach for chronic pain, requi
 
 Plan to set aside a couple of hours to do the experiences described in this book.
 
-[[Feedback]] from you is invaluable, and this book is continually refined based on your insights and updates.
+[[Feedback]] from you is invaluable, and this book is continually refined based on your insights and updates&lt;span class=&quot;secret-dot&quot;&gt;&lt;a data-passage=&quot;Book Dedication&quot;&gt;.&lt;/a&gt;&lt;/span&gt;
 
 I wish you an insightful and transforming read&lt;span class=&quot;secret-dot&quot;&gt;&lt;a data-passage=&quot;I have experienced all of these emotions at some point in my life&quot;&gt;.&lt;/a&gt;&lt;/span&gt;
 
