--- a/index.html
+++ b/index.html
@@ -1509,7 +1509,7 @@ Show the passage number in the ui-bar - I think I got this label to work
 
 This is an //intentional// book. It&#39;s probably different than any self healing book that you have read. The focus of the book is to guide you to take the actions needed to heal yourself.
 
-It&#39;s also FREE so that you can focus on healing yourself with the basic information you need, without hiring a coach or paying for a program.
+It&#39;s also free so that you can focus on healing yourself with the basic information you need.
 
 The sidebar on the left can be used to go back to a previous page.
 It can also be used to save or load your reading position. 
