--- a/index.html
+++ b/index.html
@@ -1166,7 +1166,8 @@ Say out LOUD:
 
 Now scan your body for any sensations of emotions (your neck, chest and belly area)
 
-[[Now label that sensation as an emotion]]</tw-passagedata><tw-passagedata pid="64" name="Now label that sensation as an emotion" tags="" position="675,1600" size="100,100">Select ONE of the following emotions that matches the sensation:
+[[Now label that sensation as an emotion]]</tw-passagedata><tw-passagedata pid="64" name="Now label that sensation as an emotion" tags="" position="675,1600" size="100,100">Select ONE of the following emotions that matches the sensation.
+Let the emotion come up on it&#39;s own. Allow it.
 
 &lt;table&gt;
   &lt;tr&gt;
@@ -1221,12 +1222,14 @@ Now scan your body for any sensations of emotions (your neck, chest and belly ar
 &lt;span class=&quot;red-text&quot;&gt;&quot;I am feeling -----------&quot;&lt;/span&gt;
 
 
-Write down the emotion that you spoke out loud on a paper.
+Write down the emotion that you spoke out loud on a paper while feeling it.
 
 [[Now acknowledge yourself]]</tw-passagedata><tw-passagedata pid="66" name="Now acknowledge yourself" tags="" position="325,1575" size="100,100">Now acknowledge yourself and speak out loud:
 
 &lt;span class=&quot;blue-text&quot;&gt;&quot;Good&quot;&lt;/span&gt;
 
+Slow and steady wins the race. 
+Simply //allow// the emotions to come up. 
 
 [[Repeat this process for at least 15 minutes-&gt;Let&#39;s create this into screen by screen easy to follow steps]]
 
