--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ window.trackDecision = function(decisionLabel) {
 [[Yes-&gt;Pain longer than six months]]
 
 [[No-&gt;Pain less than six months]]
-</tw-passagedata><tw-passagedata pid="3" name="Stop" tags="" position="575,700" size="100,100">I&#39;m sorry, this program does not seem applicable for you
+</tw-passagedata><tw-passagedata pid="3" name="Stop" tags="" position="575,700" size="100,100">I&#39;m sorry, this program does not seem applicable for you yet.
 
 If you wish to return to the previous page, press the back button on the sidebar. </tw-passagedata><tw-passagedata pid="4" name="Pain longer than six months" tags="" position="425,125" size="100,100">Have you seen a licensed medical doctor about this pain?
 
