Vb-track-personality

--- a/index.html
+++ b/index.html
@@ -404,21 +404,22 @@ Would you agree that some or all of these bring stress and tension into your lif
 
 </tw-passagedata><tw-passagedata pid="29" name="Yes I agree, one or more of these add stress and tension to my life" tags="A-list-of-things" position="1925,375" size="100,100">Great, I&#39;m glad you&#39;re open to noticing that you have stress and tension in your life. It&#39;s normal to have it, don&#39;t worry.
 
-Now let&#39;s consider some personality traits. 
+Now let&#39;s consider some personality traits.
 
 &lt;div&gt;
-  &lt;label&gt;&lt;input type=&quot;checkbox&quot;&gt; Perfectionist&lt;/label&gt;
-  &lt;label&gt;&lt;input type=&quot;checkbox&quot;&gt; People Pleaser&lt;/label&gt;
-  &lt;label&gt;&lt;input type=&quot;checkbox&quot;&gt; Do Gooder&lt;/label&gt;
-  &lt;label&gt;&lt;input type=&quot;checkbox&quot;&gt; Hard on yourself&lt;/label&gt;
-  &lt;label&gt;&lt;input type=&quot;checkbox&quot;&gt; Dependable&lt;/label&gt;
-  &lt;label&gt;&lt;input type=&quot;checkbox&quot;&gt; Overwhelmed&lt;/label&gt;
-  &lt;label&gt;&lt;input type=&quot;checkbox&quot;&gt; Controlling&lt;/label&gt;
-  &lt;label&gt;&lt;input type=&quot;checkbox&quot;&gt; Sensitive to criticism&lt;/label&gt;
-  &lt;label&gt;&lt;input type=&quot;checkbox&quot;&gt; Spiritual/Religious&lt;/label&gt;
-  &lt;label&gt;&lt;input type=&quot;checkbox&quot;&gt; Compulsive&lt;/label&gt;
+  &lt;label&gt;&lt;input type=&quot;checkbox&quot; onclick=&quot;trackDecision(&#39;Perfectionist&#39;)&quot;&gt; Perfectionist&lt;/label&gt;
+  &lt;label&gt;&lt;input type=&quot;checkbox&quot; onclick=&quot;trackDecision(&#39;People Pleaser&#39;)&quot;&gt; People Pleaser&lt;/label&gt;
+  &lt;label&gt;&lt;input type=&quot;checkbox&quot; onclick=&quot;trackDecision(&#39;Do Gooder&#39;)&quot;&gt; Do Gooder&lt;/label&gt;
+  &lt;label&gt;&lt;input type=&quot;checkbox&quot; onclick=&quot;trackDecision(&#39;Hard on yourself&#39;)&quot;&gt; Hard on yourself&lt;/label&gt;
+  &lt;label&gt;&lt;input type=&quot;checkbox&quot; onclick=&quot;trackDecision(&#39;Dependable&#39;)&quot;&gt; Dependable&lt;/label&gt;
+  &lt;label&gt;&lt;input type=&quot;checkbox&quot; onclick=&quot;trackDecision(&#39;Overwhelmed&#39;)&quot;&gt; Overwhelmed&lt;/label&gt;
+  &lt;label&gt;&lt;input type=&quot;checkbox&quot; onclick=&quot;trackDecision(&#39;Controlling&#39;)&quot;&gt; Controlling&lt;/label&gt;
+  &lt;label&gt;&lt;input type=&quot;checkbox&quot; onclick=&quot;trackDecision(&#39;Sensitive to criticism&#39;)&quot;&gt; Sensitive to criticism&lt;/label&gt;
+  &lt;label&gt;&lt;input type=&quot;checkbox&quot; onclick=&quot;trackDecision(&#39;Spiritual/Religious&#39;)&quot;&gt; Spiritual/Religious&lt;/label&gt;
+  &lt;label&gt;&lt;input type=&quot;checkbox&quot; onclick=&quot;trackDecision(&#39;Compulsive&#39;)&quot;&gt; Compulsive&lt;/label&gt;
 &lt;/div&gt;
 Check off all those that apply.
+
 Would you say you have a few of these traits?
 
 [[Yes I have one or more these traits]]
@@ -1326,7 +1327,7 @@ Do the exericise that you love to do, whether it is taking long walks, hikes, ru
 ║└──────────────────────────────────────┘║                                        
 ║                                        ║
 ║                                        ║
-║                  VA                    ║
+║                  Vb                    ║
 ║                                        ║
 ║                 [[Begin]]                  ║
 ║                                        ║
